<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    tools:context=".LocationOwner.OwnerDashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                android:text="@string/logo_name"
                android:textColor="@color/colorAccent"
                android:textSize="28sp" />

            <RelativeLayout
                android:id="@+id/search_bar_owner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/app_name"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:elevation="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/search_text"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/search_icon" />

            </RelativeLayout>

            <TextView
                android:id="@+id/owner_dasboard_discription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/search_bar_owner"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/brandon_grotesque_medium_italic_58a8a3c40866a"
                android:gravity="center"
                android:text="@string/owner_dashboard_desc"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

        </RelativeLayout>


        <!--        1st line of cards-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#00000000"
                    app:cardElevation="8dp">


                    <RelativeLayout
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/round_bk2">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/categories_shop_icon" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                    android:gravity="center_horizontal"
                    android:text="@string/shops"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:onClick="callCategories"
                    app:cardBackgroundColor="#00000000"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/food_back">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"

                            android:src="@drawable/categories_restaurant_icon" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                    android:gravity="center_horizontal"
                    android:text="@string/restaurants"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>


        </LinearLayout>

        <!--        2nd line of cards-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#00000000"
                    app:cardElevation="8dp">


                    <RelativeLayout
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/card_3">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/cafe_owner_image" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                    android:gravity="center_horizontal"
                    android:text="CAFE"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:onClick="callCategories"
                    app:cardBackgroundColor="#00000000"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/round_bk3">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"

                            android:src="@drawable/hospital_image" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                    android:gravity="center_horizontal"
                    android:text="Hospital"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</ScrollView>