<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".Common.LoginSignup.ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/forget_password_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="5dp"
            android:src="@drawable/general_back_icon" />
<!--        android:onClick="callBackScreenFromForgetPassword"-->


        <ImageView
            android:id="@+id/forget_password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/forget_password_icon" />


        <TextView
            android:id="@+id/forget_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="Forget\nPassword"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/forget_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:text="@string/forget_password_detail"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/black_border"
                android:padding="7dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showFullName="true"
                app:ccp_showNameCode="true" />


<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/forget_password_phone_number"-->
<!--                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@id/country_code_picker"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:hint="@string/enter_phone_number"-->
<!--                android:textColorHint="@color/black"-->
<!--                app:boxBackgroundColor="@color/lightWhite"-->
<!--                app:boxStrokeColor="@color/black"-->
<!--                app:boxStrokeWidthFocused="2dp"-->
<!--                app:endIconMode="clear_text"-->
<!--                app:endIconTint="@color/black"-->
<!--                app:hintTextColor="@color/black"-->
<!--                app:startIconDrawable="@drawable/field_phone_number_icon"-->
<!--                app:startIconTint="@color/black">-->


<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:fontFamily="@font/muli_semibold"-->
<!--                    android:inputType="phone"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textCursorDrawable="@null" />-->


<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <EditText
                android:id="@+id/forget_password_phone_number1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/country_code_picker"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:fontFamily="@font/muli_black"
                android:hint="@string/enter_phone_number"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:outlineSpotShadowColor="@color/purple_500"
                android:textColor="#121111"
                android:textSize="16sp"
                android:textColorHint="@color/purple_500"
                app:startIconDrawable="@drawable/field_phone_number_icon"
                app:startIconTint="@color/black" />

            <Button
                android:id="@+id/forget_password_next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password_phone_number1"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:onClick="verifyPhoneNumber"
                android:text="@string/next_btn"
                android:textColor="@color/black" />


        </RelativeLayout>


    </LinearLayout>


</ScrollView>